[package]
name = "nabob-admin-svc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-config = { workspace = true }
nabob-consensus = { workspace = true }
nabob-crypto = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-mempool = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-system-utils = { workspace = true }
nabob-types = { workspace = true }
bcs = { workspace = true }
futures-channel = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
