[package]
name = "nabob-consensus-notify"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-crypto = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-types = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
move-core-types = { workspace = true }
