[package]
name = "nabob-consensus"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-bitvec = { workspace = true }
nabob-bounded-executor = { workspace = true }
nabob-channels = { workspace = true }
nabob-collections = { workspace = true }
nabob-config = { workspace = true }
nabob-consensus-notify = { workspace = true }
nabob-consensus-types = { workspace = true }
nabob-crypto = { workspace = true }
nabob-crypto-derive = { workspace = true }
nabob-dkg = { workspace = true }
nabob-enum-convert-derive = { workspace = true }
nabob-event-notify = { workspace = true }
nabob-executor = { workspace = true }
nabob-executor-types = { workspace = true }
nabob-runtimes-extension = { workspace = true }
nabob-fallible = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-mempool = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-network = { workspace = true }
nabob-monitor-types = { workspace = true }
nabob-reliable-broadcast = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-safety-rules = { workspace = true }
nabob-schemadb = { workspace = true }
nabob-secure-storage = { workspace = true }
nabob-short-hex-str = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-temppath = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
nabob-validator-txpool = { workspace = true }
nabob-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
move-core-types = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha3 = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
nabob-cached-packages = { workspace = true }
nabob-config = { workspace = true, features = ["fuzzing"] }
nabob-consensus-types = { workspace = true, features = ["fuzzing"] }
nabob-executor-test-helpers = { workspace = true }
nabob-keygen = { workspace = true }
nabob-mempool = { workspace = true, features = ["fuzzing"] }
nabob-netcore = { workspace = true }
nabob-network = { workspace = true, features = ["fuzzing"] }
nabob-safety-rules = { workspace = true, features = ["testing"] }
nabob-vm = { workspace = true, features = ["fuzzing"] }
nabob-vm-validator = { workspace = true }
claims = { workspace = true }
mockall = { workspace = true }
move-core-types = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = [
    "nabob-consensus-types/fuzzing",
    "nabob-config/fuzzing",
    "nabob-crypto/fuzzing",
    "nabob-mempool/fuzzing",
    "nabob-types/fuzzing",
    "nabob-safety-rules/testing",
]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[lints.clippy]
unwrap_used = "deny"
