[package]
name = "nabob-crash-handler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-logger = { workspace = true }
backtrace = { workspace = true }
move-core-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
