[package]
name = "nabob-data-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-config = { workspace = true }
nabob-crypto = { workspace = true }
nabob-id-generator = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-netcore = { workspace = true }
nabob-network = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-storage-cli = { workspace = true }
nabob-storage-types = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
ordered-float = { workspace = true }
# Note: we cannot rely on the workspace version of rand because it's out-of-date
# and does not provide the necessary interfaces for weighted sampling. Similarly,
# it's not trivial to update rand on the workspace because of several dependency
# issues (e.g., other outdated crate versions). This is why we fix the version here.
# Eventually we'll need to update the workspace to use the latest version of rand.
rand = "0.8.5"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
nabob-channels = { workspace = true }
nabob-network = { workspace = true, features = ["fuzzing"] }
nabob-monitor-types = { workspace = true }
nabob-storage-svc = { workspace = true }
nabob-time-svc = { workspace = true, features = ["async", "testing"] }
async-trait = { workspace = true }
bcs = { workspace = true }
claims = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true }
