[package]
name = "nabob-data-stream-svc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-channels = { workspace = true }
nabob-config = { workspace = true }
nabob-crypto = { workspace = true }
nabob-data-cli = { workspace = true }
nabob-id-generator = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
enum_dispatch = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
nabob-storage-types = { workspace = true }
nabob-time-svc = { workspace = true, features = ["testing"] }
nabob-types = { workspace = true, features = ["fuzzing"] }
claims = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
