[package]
name = "nabob-dkg-runtime"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-bounded-executor = { workspace = true }
nabob-channels = { workspace = true }
nabob-config = { workspace = true }
nabob-consensus-types = { workspace = true }
nabob-crypto = { workspace = true }
nabob-crypto-derive = { workspace = true }
nabob-enum-convert-derive = { workspace = true }
nabob-event-notify = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-network = { workspace = true }
nabob-reliable-broadcast = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-safety-rules = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
nabob-validator-txpool = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[features]
smoke-test = []
