[package]
name = "nabob-enum-convert-derive"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
trybuild = { workspace = true }
